# everybody.codes

./: .gitignore  Cargo.toml  LICENSE-MIT  README.org
2024/: cargo-all.sh  scaffold.sh
2024/quest-01/: Cargo.toml
2024/quest-01/benches/: bench.rs
2024/quest-01/data/: part_2  part_3
2024/quest-01/src/: main.rs
2024/quest-02/: Cargo.toml
2024/quest-02/benches/: bench.rs
2024/quest-02/data/: part_1  part_2  part_3
2024/quest-02/src/: lib.rs  main.rs
2024/quest-03/: Cargo.toml
2024/quest-03/benches/: bench.rs
2024/quest-03/data/: part_1  part_2  part_3
2024/quest-03/src/: main.rs
2024/quest-04/: Cargo.toml
2024/quest-04/.cargo/: config.toml
2024/quest-04/benches/: bench.rs
2024/quest-04/data/: part_1  part_2  part_3
2024/quest-04/src/: lib.rs  main.rs
2024/quest-05/: Cargo.toml
2024/quest-05/benches/: bench.rs
2024/quest-05/data/: part_1  part_2  part_3
2024/quest-05/src/: lib.rs  main.rs
2024/quest-06/: Cargo.toml
2024/quest-06/benches/: bench.rs
2024/quest-06/data/: part_1  part_2  part_3
2024/quest-06/src/: main.rs
2024/quest-07/: Cargo.toml
2024/quest-07/benches/: bench.rs
2024/quest-07/data/: part_1  part_2  part_3
2024/quest-07/src/: main.rs
2024/quest-08/: Cargo.toml
2024/quest-08/benches/: bench.rs
2024/quest-08/data/: .gitignore  part_1  part_3
2024/quest-08/src/: lib.rs  main.rs
2024/quest-09/: Cargo.toml
2024/quest-09/benches/: bench.rs
2024/quest-09/data/: part_1  part_2  part_3
2024/quest-09/src/: lib.rs  main.rs
2024/quest-10/: Cargo.toml
2024/quest-10/benches/: bench.rs
2024/quest-10/data/: part_1  part_2  part_3
2024/quest-10/src/: lib.rs  main.rs
2024/quest-11/: Cargo.toml
2024/quest-11/benches/: bench.rs
2024/quest-11/data/: part_1  part_2  part_3
2024/quest-11/src/: lib.rs  main.rs
2024/quest-12/: Cargo.toml
2024/quest-12/benches/: bench.rs
2024/quest-12/data/: part_1  part_2  part_3
2024/quest-12/src/: main.rs
2024/quest-13/: Cargo.toml
2024/quest-13/benches/: bench.rs
2024/quest-13/data/: part_1  part_2  part_3
2024/quest-13/src/: lib.rs  main.rs
2024/quest-14/: Cargo.toml
2024/quest-14/benches/: bench.rs
2024/quest-14/data/: part_1  part_2  part_3
2024/quest-14/src/: lib.rs  main.rs
2024/quest-15/: Cargo.toml
2024/quest-15/benches/: bench.rs
2024/quest-15/data/: part_1  part_2  part_3
2024/quest-15/src/: lib.rs  main.rs
2024/quest-16/: Cargo.toml
2024/quest-16/benches/: bench.rs
2024/quest-16/data/: part_1  part_2  part_3
2024/quest-16/src/: lib.rs  main.rs
2024/quest-17/: Cargo.toml
2024/quest-17/benches/: bench.rs
2024/quest-17/data/: part_1  part_2  part_3
2024/quest-17/src/: lib.rs  main.rs
2024/quest-18/: Cargo.toml
2024/quest-18/benches/: bench.rs
2024/quest-18/data/: part_1  part_2  part_3
2024/quest-18/src/: lib.rs  main.rs
2024/quest-19/: Cargo.toml
2024/quest-19/benches/: bench.rs
2024/quest-19/data/: part_1  part_2  part_3
2024/quest-19/src/: main.rs
2024/quest-20/: Cargo.toml
2024/quest-20/benches/: bench.rs
2024/quest-20/data/: part_1  part_2  part_3
2024/quest-20/src/: lib.rs  main.rs
2024/quest-21/: Cargo.toml
2024/quest-21/benches/: bench.rs
common/everybody-codes/: Cargo.toml
common/everybody-codes/src/: client.rs  lib.rs  parts_data.rs
common/mem/: Cargo.toml
common/mem/src/: lib.rs
events/2024/quest-02/: Cargo.toml
events/2024/quest-02/benches/: bench.rs
events/2024/quest-02/src/: main.rs
events/2024/quest-06/: Cargo.toml
events/2024/quest-06/benches/: bench.rs
events/2024/quest-06/src/: lib.rs  main.rs
events/2024/quest-12/: Cargo.toml
events/2024/quest-12/benches/: bench.rs
events/2024/quest-12/src/: lib.rs  main.rs
events/2024/quest-14/: Cargo.toml  build.rs
events/2024/quest-14/benches/: bench.rs
events/2024/quest-14/src/: main.rs
events/2024/quest-16/: Cargo.toml
events/2024/quest-16/benches/: bench.rs
events/2024/quest-16/src/: main.rs
events/2024/quest-18/: Cargo.toml
events/2024/quest-18/benches/: bench.rs
events/2024/quest-18/src/: main.rs
events/2024/quest-19/: Cargo.toml
events/2024/quest-19/benches/: bench.rs
events/2024/quest-19/src/: lib.rs  main.rs
events/2025/quest-02/: Cargo.toml
events/2025/quest-02/benches/: bench.rs
events/2025/quest-02/data/: part_1  part_2
events/2025/quest-02/src/: lib.rs  main.rs  simd.rs  simple.rs
events/2025/quest-05/: Cargo.toml
events/2025/quest-05/benches/: bench.rs
events/2025/quest-05/data/: part_1  part_2  part_3
events/2025/quest-05/src/: lib.rs  main.rs
events/2025/quest-06/: Cargo.toml
events/2025/quest-06/benches/: bench.rs
events/2025/quest-06/data/: part_1  part_2  part_3
events/2025/quest-06/src/: lib.rs  main.rs
events/2025/quest-07/: Cargo.toml
events/2025/quest-07/benches/: bench.rs
events/2025/quest-07/data/: part_1  part_2  part_3
events/2025/quest-07/src/: lib.rs  main.rs
events/2025/quest-08/: Cargo.toml
events/2025/quest-08/benches/: bench.rs
events/2025/quest-08/examples/: render.rs
events/2025/quest-08/src/: lib.rs  main.rs
events/2025/quest-09/: Cargo.toml
events/2025/quest-09/benches/: bench.rs
events/2025/quest-09/src/: lib.rs  main.rs
events/2025/quest-10/: Cargo.toml
events/2025/quest-10/benches/: bench.rs
events/2025/quest-10/src/: lib.rs  main.rs  part_1.rs  part_2.rs  part_3.rs
events/2025/quest-11/: Cargo.toml
events/2025/quest-11/benches/: bench.rs
events/2025/quest-11/src/: lib.rs  main.rs
events/2025/quest-13/: Cargo.toml
events/2025/quest-13/benches/: bench.rs
events/2025/quest-13/src/: lib.rs  main.rs
events/2025/quest-16/: Cargo.toml
events/2025/quest-16/benches/: bench.rs
events/2025/quest-16/src/: lib.rs  main.rs
events/2025/quest-18/: Cargo.toml
events/2025/quest-18/benches/: bench.rs
events/2025/quest-18/src/: lib.rs  main.rs
stories/1/quest-01/: Cargo.toml
stories/1/quest-01/benches/: bench.rs
stories/1/quest-01/src/: lib.rs  main.rs
stories/1/quest-02/: Cargo.toml
stories/1/quest-02/benches/: bench.rs
stories/1/quest-02/src/: btree.rs  btree2.rs  lib.rs  main.rs
(+129 files in other folders)
