[workspace]
members = [
    "common/everybody-codes",
    "common/mem",

    # Event 2024
    "events/2024/quest-01",
    "events/2024/quest-02",
    "events/2024/quest-03",
    "events/2024/quest-04",
    "events/2024/quest-05",
    "events/2024/quest-06",
    "events/2024/quest-07",
    "events/2024/quest-08",
    "events/2024/quest-09",
    "events/2024/quest-10",
    "events/2024/quest-11",
    "events/2024/quest-12",
    "events/2024/quest-13",
    "events/2024/quest-14",
    "events/2024/quest-15",
    "events/2024/quest-16",
    "events/2024/quest-17",
    "events/2024/quest-18",
    "events/2024/quest-19",
    "events/2024/quest-20",
    
    "events/2024/quest-21",

    # Story 1
    "stories/1/quest-01",
    "stories/1/quest-02",
    "stories/1/quest-03",

    # Story 2
    "stories/2/quest-01",
    "stories/2/quest-02",
    "stories/2/quest-03",
    
    # Event 2025
    "events/2025/quest-01",
    "events/2025/quest-02",
    "events/2025/quest-03",
    "events/2025/quest-04",
    "events/2025/quest-05",
    "events/2025/quest-06",
    "events/2025/quest-07",
    "events/2025/quest-08",
    "events/2025/quest-09",
    "events/2025/quest-10",
    "events/2025/quest-11",
    "events/2025/quest-12",
    "events/2025/quest-13",
    "events/2025/quest-14",
    "events/2025/quest-15",
    "events/2025/quest-16",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
readme = "README.org"
version = "0.1.0"
authors = ["vescoc"]

[workspace.dependencies]
aes = "0.8.4"
bytecount = "0.6.8"
cbc = { version = "0.1.2", features = ["std"] }
dirs = "6.0.0"
hashbrown = "0.15.1"
hex = "0.4.3"
nalgebra = "0.33.2"
num = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
toml = "0.9.4"
criterion = { version = "0.7", features = ["html_reports"] }
itertools = "0.14.0"
heapless = "0.9.1"
gcd = "2.3.0"
imageproc = "0.25"
clap = { version = "4.5", features = ["derive"] }

everybody-codes = { path = "common/everybody-codes" }
mem = { path = "common/mem" }

[workspace.lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1
