[package]
name = "quest-09"
version = "0.1.0"
edition = "2024"

[package.metadata.everybody_codes]
event = 2024
quest = 9

[dependencies]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[build-dependencies]
everybody-codes = { path = "../../common/everybody-codes" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1