[package]
name = "quest-11"
version = "0.1.0"
edition = "2024"

[package.metadata.everybody_codes]
event = 2024
quest = 11

[dependencies]
nalgebra = "0.33.2"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[build-dependencies]
everybody-codes = { path = "../../common/everybody-codes" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1