[package]
name = "everybody-codes"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
dirs = "6.0.0"
hex = "0.4.3"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
toml = "0.9.4"

[lints.clippy]
pedantic = "deny"