[package]
name = "everybody-codes"
version.workspace = true
edition.workspace = true

[dependencies]
aes.workspace = true
cbc.workspace = true
dirs.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
