[package]
name = "event-2024-02"
version.workspace = true
edition.workspace = true

[package.metadata.everybody_codes]
event = 2024
quest = 2

[dependencies]
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
everybody-codes.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
