[package]
name = "event-2024-14"
version.workspace = true
edition.workspace = true

[package.metadata.everybody_codes]
event = 2024
quest = 14

[dependencies]
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
everybody-codes.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true