[package]
name = "event-2025-10"
version.workspace = true
edition.workspace = true

[package.metadata.everybody_codes]
event = 2025
quest = 10

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
everybody-codes.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
