[package]
name = "story-1-01"
version.workspace = true
edition.workspace = true

[package.metadata.everybody_codes]
event = 1
quest = 1

[dependencies]
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
everybody-codes.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
