[package]
name = "story-1-02"
version.workspace = true
edition.workspace = true

[package.metadata.everybody_codes]
event = 1
quest = 2

[dependencies]

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
everybody-codes.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
